# ChipLogistics

./: .env.example  .gitignore  .spaceignore  README.md  Spacefile  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
chip_logistics/: config.py  main.py
chip_logistics/api/: __init__.py  factory.py
chip_logistics/api/routers/: deps.py
chip_logistics/bot/: factory.py  handler_result.py
chip_logistics/bot/callbacks/: __init__.py  back.py  calcs.py
chip_logistics/bot/routers/: __init__.py  menu.py  start.py
chip_logistics/bot/states/: calcs.py
chip_logistics/bot/texts/: __init__.py  articles.py  back.py  calcs.py  greet.py
chip_logistics/bot/views/: back.py  greet.py  menu.py
chip_logistics/core/amocrm/: api.py  client.py  repo.py  responses.py  service.py
chip_logistics/core/articles/: articles.py  calcs.py  currencies.py  models.py  repo.py  report.py  service.py
chip_logistics/deta/: deta.py  models.py
chip_logistics/models/: articles.py
chip_logistics/utils/: __init__.py  closing.py  decimal.py
pricecalcbot/: __init__.py  main.py
pricecalcbot/api/: factory.py
pricecalcbot/bot/: __init__.py  factory.py  messages.py
pricecalcbot/core/: __init__.py
pricecalcbot/deta/: __init__.py
pricecalcbot/models/: __init__.py  amocrm.py  articles.py
scripts/: push.bat
tests/: __init__.py  conftest.py
tests/amocrm/: .env.example  __init__.py  conftest.py  test_api.py  test_service.py
tests/articles/: __init__.py  conftest.py  report_template.docx  test_articles.py  test_calcs.py  test_report.py  test_service.py
(+110 files in other folders)
