[tool.poetry]
name = "pricecalcbot"
version = "0.1.0"
description = ""
authors = ["butvinm <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pydantic = "^2.3.0"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
mypy = "^1.5.1"
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
